Rendering size of squares now depends on screensize